docker-registry/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: images
          mountPath: /var/lib/registry
#        - mountPath: /certs
#          name: certs
#        - mountPath: /auth
#          name: auth
      - name: nginx
        image: nginx:1.17-alpine
        ports:
        - name: docker
          containerPort: 443
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx
        - name: cert
          mountPath: /etc/nginx/tls
        - name: auth
          mountPath: /etc/nginx/auth
      volumes:
      - name: images
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: registry-nginx-conf
      - name: cert
        secret:
          secretName: docker-registry-tls
      - name: auth
        secret:
          secretName: docker-registry-htpasswd
