docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  selector:
    app: docker-registry
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: docker
